assets/css/app.css
/* See the Tailwind configuration guide for advanced usage
   https://tailwindcss.com/docs/configuration */

@import "tailwindcss" source(none);
@source "../css";
@source "../js";
@source "../../lib/vmemo_web";

@view-transition {
    navigation: auto;
}

/* A Tailwind plugin that makes "hero-#{ICON}" classes available.
   The heroicons installation itself is managed by your mix.exs */
@plugin "../vendor/heroicons";

/* daisyUI Tailwind Plugin. You can update this file by fetching the latest version with:
   curl -sLO https://github.com/saadeghi/daisyui/releases/latest/download/daisyui.js
   Make sure to look at the daisyUI changelog: https://daisyui.com/docs/changelog/ */
@plugin "../vendor/daisyui" {
    themes: false;
}

/* daisyUI theme plugin. You can update this file by fetching the latest version with:
  curl -sLO https://github.com/saadeghi/daisyui/releases/latest/download/daisyui-theme.js
  We ship with a light theme inspired on Phoenix/GitHub colors.
  Build your own at: https://daisyui.com/theme-generator/ */
@plugin "../vendor/daisyui-theme" {
    name: "light";
    default: true;
    prefersdark: false;
    color-scheme: "light";
    --color-base-100: oklch(98% 0 0);
    --color-base-200: oklch(96% 0.001 286.375);
    --color-base-300: oklch(87% 0.004 286.32);
    --color-base-content: oklch(21% 0.006 285.885);
    --btn-color: color-mix(in oklab, var(--color-base-content) 30%, transparent);
    --color-primary: #FD4F00;
    --color-primary-content: #FDF7F0;
    --color-secondary: #8B5CF6;
    --color-secondary-content: #F8F5FF;
    --color-accent: #6B7280;
    --color-accent-content: #FAFAFA;
    --color-neutral: #282828;
    --color-neutral-content: #FAFAFA;
    --color-info: #3B82F6;
    --color-info-content: #F0F7FF;
    --color-success: #10B981;
    --color-success-content: #F0FDF4;
    --color-warning: #F59E0B;
    --color-warning-content: #FFFBEB;
    --color-error: #EF4444;
    --color-error-content: #FEF2F2;
    --radius-selector: 0.25rem;
    --radius-field: 0.25rem;
    --radius-box: 0.5rem;
    --size-selector: 0.21875rem;
    --size-field: 0.21875rem;
    --border: 1.5px;
    --depth: 1;
    --noise: 0;
}

@plugin "../vendor/daisyui-theme" {
    name: "dark";
    default: false;
    prefersdark: true;
    color-scheme: "dark";
    --color-base-100: oklch(25.33% 0.016 252.42);
    --color-base-200: oklch(23.26% 0.014 253.1);
    --color-base-300: oklch(21.15% 0.012 254.09);
    --color-base-content: oklch(97.807% 0.029 256.847);
    --btn-color: color-mix(in oklab, var(--color-base-content) 20%, transparent);
    --color-primary: #FD4F00;
    --color-primary-content: #FDF7F0;
    --color-secondary: #8B5CF6;
    --color-secondary-content: #F8F5FF;
    --color-accent: #9CA3AF;
    --color-accent-content: #111827;
    --color-neutral: #111827;
    --color-neutral-content: #F9FAFB;
    --color-info: #60A5FA;
    --color-info-content: #0B1B34;
    --color-success: #34D399;
    --color-success-content: #022C22;
    --color-warning: #FBBF24;
    --color-warning-content: #3A2A04;
    --color-error: #F87171;
    --color-error-content: #3C0A0A;
    --radius-selector: 0.25rem;
    --radius-field: 0.25rem;
    --radius-box: 0.5rem;
    --size-selector: 0.21875rem;
    --size-field: 0.21875rem;
    --border: 1.5px;
    --depth: 1;
    --noise: 0;
}


/* Add variants based on LiveView classes */
@custom-variant phx-click-loading (&:where(.phx-click-loading, .phx-click-loading &));
@custom-variant phx-submit-loading (&:where(.phx-submit-loading, .phx-submit-loading &));
@custom-variant phx-change-loading (&:where(.phx-change-loading, .phx-change-loading &));

/* Use the data attribute for dark mode  */
@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));

/* Make LiveView wrapper divs transparent for layout */
[data-phx-session],
[data-phx-teleported-src] {
    display: contents
}

/* This file is for your main application CSS */

@layer base {
    textarea {
        field-sizing: content;
        min-height: 3lh;

        @apply px-3 py-2 w-full;
    }

    * {
        outline: none !important;
        outline-offset: 0 !important;
    }

    .phx-click-loading.btn-icon {
        @apply animate-pulse text-primary;
    }
}

@layer components {
    .btn {
        @apply btn-sm;
        @apply transition-transform duration-200;
    }

    .btn:hover:not(:disabled):not(.btn-ghost) {
        transform: scale(1.01);
    }

    .btn-outline {
        --btn-fg: var(--color-base-content) !important;
        color: var(--color-base-content) !important;
    }

    .btn-circle:not(.btn-ghost) {
        @apply ring-1 ring-base-100;
    }

    .btn-circle:where(.btn-xs) {
        height: 1.5rem;
        width: 1.5rem;
        min-height: 1.5rem;
    }

    .input {
        height: auto;
    }

    .input input,
    .input input:focus {
        border: none;
        box-shadow: none;
        outline: none;
        @apply rounded-lg;
    }

    .input:focus,
    .input:focus-within {
        box-shadow: none;
        outline: none;
    }

    .textarea {
        font-size: 1rem;
        min-height: 3lh;

        @apply px-3 py-2 w-full rounded-lg;
    }

    .textarea:focus {
        outline: none;
    }

    /* Disable hover and focus effects on inputs when form is submitting */
    .phx-submit-loading .input:hover,
    .phx-submit-loading .textarea:hover,
    .phx-submit-loading .input input:hover,
    .phx-submit-loading .textarea textarea:hover,
    .phx-submit-loading .input:focus,
    .phx-submit-loading .textarea:focus,
    .phx-submit-loading .input:focus-within,
    .phx-submit-loading .textarea:focus-within,
    .phx-submit-loading input:hover,
    .phx-submit-loading textarea:hover,
    .phx-submit-loading input:focus,
    .phx-submit-loading textarea:focus {
        --input-color: color-mix(in oklab, var(--color-base-content) 20%, #0000) !important;
        border-color: var(--input-color) !important;
        box-shadow: 0 1px color-mix(in oklab, var(--input-color) calc(var(--depth) * 10%), #0000) inset, 0 -1px oklch(100% 0 0 / calc(var(--depth) * 0.1)) inset !important;
        outline: none !important;
    }

    .chat-bubble {
        max-width: 65ch !important;
    }

    .chat-bubble img {
        max-width: 420px;
        width: auto;
        height: auto;
    }

}

